--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -332,6 +332,8 @@ version 28-git (????-??-??):
   - improvement: network forms: public network overlaps generate warning instead error [chilan]
   - enhancement: 'phpui.zipcode_provider' supports multi provider specification (providers are separated
     by white characters or commas); added 'prg' provider support [chilan]
+  - enhancement: 'documents.attachment_filename' configuration variable with '%filename' as default value
+    allows to tweak main attachment file name sent to customer [chilan]
 
 version 27.0 (2021-08-20):
 
