--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -341,6 +341,8 @@ version 28-git (????-??-??):
   - improvement: 'payments.auto_payments' with default value 'false' controls if invoices with pay type
     of 'cash', 'paid', 'barter' and 'compensation' trigger oposite finascial operations (usually payments)
     automation [chilan]
+  - improvement: 'phpui.netrangelist_pagelimit' with default value '100' controls limit of network ranges
+    on single page [chilan]
 
 version 27.0 (2021-08-20):
 
