--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -344,6 +344,7 @@ version 28-git (????-??-??):
   - improvement: 'phpui.netrangelist_pagelimit' with default value '100' controls limit of network ranges
     on single page [chilan]
   - enhancement: implemented SIDUSIS report support [chilan]
+  - enhancement: added customer group filter in invoice report export form [chilan]
 
 version 27.0 (2021-08-20):
 
