--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -347,6 +347,7 @@ version 28-git (????-??-??):
   - enhancement: added customer group filter in invoice report export form [chilan]
   - enhancement: added 'notes.customer_credentials_format' suuport - it is very similar in behaviour
     to 'invoices.customer_credentials_format' [chilan]
+  - enhancement: export: added '%BALANCE' symbol support [chilan]
 
 version 27.0 (2021-08-20):
 
