--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -356,6 +356,7 @@ version 28-git (????-??-??):
   - enhancement: '--omit-free-days' parameter of bin/lms-notify.php and bin/lms-sendinvoices.php backend
     scripts blocks sending notification and invoices on weekends and holidays [chilan]
   - enhancement: implemented 'negation' flag for node group selection in customer search form [chilan]
+  - enhancement: added link button which opens point with gps coordinates on external map [chilan]
 
 version 27.0 (2021-08-20):
 
