--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -357,6 +357,8 @@ version 28-git (????-??-??):
     scripts blocks sending notification and invoices on weekends and holidays [chilan]
   - enhancement: implemented 'negation' flag for node group selection in customer search form [chilan]
   - enhancement: added link button which opens point with gps coordinates on external map [chilan]
+  - improvement: added sms message in customer message box related to sent sms auth code used during
+    customer document confirmation in userpanel [chilan]
 
 version 27.0 (2021-08-20):
 
