--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -362,6 +362,8 @@ version 28-git (????-??-??):
   - improvement: helpdesk quicksearch use 2-level logical operators - normal attributes are combined
     with 'OR' operator, but 'unresolved only' is combined with 'AND' operator' [chilan]
   - enhancement: added JPK_FA (4) support [chilan]
+  - improvement: 'logs.message_limit' with default value of '11' allows to control how many transaction
+    messages are decoded and displayed in transaction lists [chilan]
 
 version 27.0 (2021-08-20):
 
