--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -364,6 +364,7 @@ version 28-git (????-??-??):
   - enhancement: added JPK_FA (4) support [chilan]
   - improvement: 'logs.message_limit' with default value of '11' allows to control how many transaction
     messages are decoded and displayed in transaction lists [chilan]
+  - improvement/cleanup: renamed 'phpui.logging' configuration variable to 'logs.enabled' [chilan]
 
 version 27.0 (2021-08-20):
 
