--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -366,6 +366,10 @@ version 28-git (????-??-??):
     messages are decoded and displayed in transaction lists [chilan]
   - improvement/cleanup: renamed 'phpui.logging' configuration variable to 'logs.enabled' [chilan]
   - improvement: network device name maximum length changed from 32 to 100 [chilan]
+  - enhancement: non-empty 'phpui.node_empty_mac' value allows to disable mac requirement specification
+    for nodes; mac address from this setting specifies fake-mac stored in database for nodes
+    without any assigned macs (setting has no default value what means mac addresses are required
+    for node) [chilan]
 
 version 27.0 (2021-08-20):
 
