enhancement: new action on customer search results - customer status change (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -372,6 +372,7 @@ version 28-git (????-??-??):
     for node) [chilan]
   - enhancement: user 'trusted hosts' property allows to define IP address/network list from which
     two factor authentication mechanism is bypassed [chilan]
+  - enhancement: new action on customer search results - customer status change [chilan]
 
 version 27.0 (2021-08-20):
 
