--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -382,6 +382,7 @@ version 28-git (????-??-??):
     in html templates [chilan]
   - improvement: updated 'domains' table structure to match PowerDNS 4.7 [chilan]
   - enhancement: userpanel/document: present confirmation type and date in document list [chilan]
+  - enhancement: date interval selection in message list [chilan]
 
 version 27.0 (2021-08-20):
 
