--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -391,6 +391,7 @@ version 28-git (????-??-??):
   - enhancement: 'documents.protected_document_types' specifies which types of documents are protected
     with password when sending to customers (default empty value means all document types) [chilan]
   - enhancement: added tariff flag filter and presentation them on list near tariff name [chilan]
+  - improvement: new mac format with colons and lower case hex digits [chilan]
 
 version 27.0 (2021-08-20):
 
