enhancement: messageadd form: '%bankaccount' can be replaced optionally by customer alternative bank accounts - 'messages.use_all_accounts' and 'messages.use_only_alternative_accounts' control replacement behavior (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -411,8 +411,11 @@ version 28-git (????-??-??):
     'approval_customer_notification_mail_subject', 'approval_customer_notification_mail_body'
     and 'approval_customer_notification_attachments' [chilan]
   - enhancement: lms-notify.php: '%bankaccount' can be replaced optionally by customer alternative
-    bank accounts - 'use_all_accounts' and 'use_only_alternative_accounts' controls replacement
+    bank accounts - 'use_all_accounts' and 'use_only_alternative_accounts' control replacement
     behavior [chilan]
+  - enhancement: messageadd form: '%bankaccount' can be replaced optionally by customer alternative
+    bank accounts - 'messages.use_all_accounts' and 'messages.use_only_alternative_accounts' control
+    replacement behavior [chilan]
 
 version 27.0 (2021-08-20):
 
