--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -424,6 +424,9 @@ version 28-git (????-??-??):
     to 'messages.send_limit_violation_type' [chilan]
   - devel/cleanup: renamed 'phpui.send_message_to_sender_checkbox'
     to 'messages.send_to_sender_checkbox' [chilan]
+  - enhancement: messageadd form: '%bankaccount' can be replaced optionally by customer alternative
+    bank accounts - 'sendinvoices.use_all_accounts' and 'sendinvoices.use_only_alternative_accounts'
+    control replacement behavior [chilan]
 
 version 27.0 (2021-08-20):
 
