--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -466,6 +466,9 @@ version 28-git (????-??-??):
     and 'documents.customer_approval_notification_document_types' with empty default
     values (which means all document types) controls which document type commitment triggers
     operator and customer notifications [chilan]
+  - enhancement: 'phpui.node_gps_coordinates_required' and 'phpui.netdev_gps_coordinates_required'
+    (with default value of 'none' for both) control gps coordinates validation process for nodes
+    and network devices [chilan]
 
 version 27.0 (2021-08-20):
 
