--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -469,6 +469,7 @@ version 28-git (????-??-??):
   - enhancement: 'phpui.node_gps_coordinates_required' and 'phpui.netdev_gps_coordinates_required'
     (with default value of 'none' for both) control gps coordinates validation process for nodes
     and network devices [chilan]
+  - enhancement: uke/pit: network link multi point support [chilan]
 
 version 27.0 (2021-08-20):
 
