--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -482,6 +482,7 @@ version 28-git (????-??-??):
   - enhancement: added {barcode} smarty function support to ease barcode/qrcore generation
     in html templates [chilan]
   - enhancement: implemented 'hide customer SSN' option in customer search form [chilan]
+  - improvement: lms-notify.php 'contracts' type notifications: ignore archived documents [chilan]
 
 version 27.0 (2021-08-20):
 
