--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -489,6 +489,8 @@ version 28-git (????-??-??):
   - enhancement: lms-rtparser.php: configuration section from which settings are obtained is configurable
     with --section launch parameter; --silent|-s renamed to --quiet|-q [chilan]
   - enhancement: uke-pit: division selection for 'customer services' report type [chilan]
+  - enhancement: configuration variable 'teryt.show_numeric_identifiers' with 'false' as default allows
+    to enable numeric TERYT identifier presentation near customer addresses [chilan]
 
 version 27.0 (2021-08-20):
 
